--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head><meta charset="utf-8" /></head>
 <body>
 <H1>Annitas Webseit</H1>
+here is some text
     <div>
         
                 <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
