--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head><meta charset="utf-8" /></head>
 <body>
-<H1>Annitas Webseit</H1>
+<H1>Annitas Website</H1>
+<H2>This is a second headline</H2>
 here is some text
     <div>
         
